# solidity-bn254

./: .gas-snapshot  .gitignore  Cargo.toml  README.md  flake.nix  foundry.toml  justfile
.github/workflows/: test.yml
diff-test/: Cargo.toml
diff-test/src/: lib.rs  main.rs
src/: BN254.sol  Utils.sol
test/: BN254.t.sol
