[workspace]
resolver = "2"
members = [
  "diff-test"
]

[workspace.package]
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
ark-bn254 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-serialize = "0.4.2"
ark-std = { version = "0.4.0", default-features = false }
alloy = { version = "0.12.5", default-features = false, features = ["contract", "sol-types"] }
const-hex = "1.14.0"
