[workspace]
resolver = "2"
members = ["diff-test"]

[workspace.package]
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
version = "0.1.1"

[workspace.dependencies]
alloy = { version = "1.0", default-features = false, features = ["contract", "sol-types"] }
ark-bn254 = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"
ark-poly = "0.5"
ark-serialize = "0.5"
ark-std = { version = "0.5", default-features = false }
