[package]
name = "diff-test-bn254"
description = "Structs, type conversion and differential test scripts for solidity-bn254"
authors = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[dependencies]
alloy = { workspace = true }
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-std = { workspace = true }
clap = { version = "^4.4", features = ["derive"] }
const-hex = { workspace = true }
